# tcp-client

./: .gitignore  Cargo.toml  readme.md
methods/: get.rs  list.rs  mod.rs  upload.rs
src/: init.rs  lib.rs  main.rs
