[package]
name = "tcp-client"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
chrono = "0.4.38"
dirs = "5.0.1"
env_logger = "0.11.3"
log = "0.4.22"
once_cell = "1.19.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
simple_logger = "5.0.0"
tokio = { version = "1.38.0", features = ["full"] }
whoami = "1.5.1"
